--- a/_posts/2014-12-11-myfirstblog.html
+++ b/_posts/2014-12-11-myfirstblog.html
@@ -2,5 +2,6 @@
 layout:default
 title:hello my first blog
 ---
-<h2>{{page.title}}</h2>
+<h2>{{ page.title }}</h2>
 <p>my first blog content!~</p>
+<p>{{ page.date | data_to_string }}</p>
